# curate

./: .gitignore  .gitmodules  Makefile  PITFALLS.md  README.md  TESTING.md  TEST_STATUS.md  pyproject.toml
docs/: ARCHITECTURE.md  VISION.md
lua/curate/: README.md  client.lua  init.lua  keymaps.lua
src/curate/: README.md  __init__.py  __main__.py  analyzer.py  api.py  ast_model_design.py  backend_factory.py  backend_protocol.py  blocks.py  cli.py  config.py  engine.py  entity.py  evaluator.py  folding.py  foldplan.py  index.py  language_rules.py  line.py  model.py  node.py  normalize.py  policy.py  query.py  render_text.py  rules.py  scope.py  source.py  types.py  views.py  wrapper.py
src/curate/backends/: __init__.py  python_ast.py
src/curate/docs/: ARCHITECTURE.md  (+4 more)
src/curate_next/: ARCHITECTURE.md  REPR_TESTING.md  __init__.py  __main__.py  compile.py  facts.py  index.py  query.py  relations.py
tests/: _example_model_doc.py  conftest.py  example_code_doc_for_manual_testing.py  example_model.py  test_cli.py  test_cli_contract.py  test_cli_json_output.py  test_context_manager_invariants.py  test_engine.py  test_engine_benchmark.py  test_engine_fuzz.py  test_engine_projection.py  test_engine_properties.py  test_engine_schema.py  test_example_model_scenario.py  test_invariants.py  test_non_python_input.py  test_python_backend.py  test_relations.py  test_toggle_semantics_python.py  test_treesitter_python.py  test_unknown_language.py  test_views_and_query.py  utils.py
tests/fixtures/: python_minimal.py
tests/lua/: busted_helper.lua  smoke_spec.lua  utils.lua
(+27 files in other folders)
