[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "curate"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[project.scripts]
curate = "curate.__main__:main"

# ============================================================
# Pytest + coverage
# ============================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]

addopts = [
    "--cov=curate",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
branch = true
source = ["curate"]
omit = [
    "src/curate/cli.py",
    "src/curate/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

# ============================================================
# Optional dependencies
# ============================================================

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
]

treesitter = [
    "tree-sitter>=0.25",
    "tree-sitter-python>=0.25",
]
